--- a/ipush-connection/pom.xml
+++ b/ipush-connection/pom.xml
@@ -19,6 +19,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.cold.ipush</groupId>
             <artifactId>ipush-core</artifactId>
         </dependency>
