--- a/ipush-core/pom.xml
+++ b/ipush-core/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>netty-transport</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
